--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,10 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Custom gitignore additions
+autoreconnect/test_output.png
+
+autoreconnect/*.png
+autoreconnect/*/image*
+autoreconnect/*/client_*
