--- a/crash detection/config.json
+++ b/crash detection/config.json
@@ -3,5 +3,13 @@
     "webhook_url": "",
 
     "host": "",
-    "port": 9000
+    "port": 9000,
+
+    "twilio": {
+        "enabled": false,
+        "account_sid": "",
+        "auth_token": "",
+        "twilio_number": "",
+        "phone_number": ""
+    }
 }
